--- a/PemogramanWeb/index.html
+++ b/PemogramanWeb/index.html
@@ -1,12 +1,64 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Biodata Pengumpulan Tugas</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Pengumpulan Tugas Pemrograman Web</h1>
+    </header>
+
+    <main>
+      <section>
+        <h2>Biodata</h2>
+        <dl>
+          <dt>Nama</dt>
+          <dd>Michael Jordan Alfanius Sianipar</dd>
+
+          <dt>NPM</dt>
+          <dd>140810230060</dd>
+
+          <dt>Jurusan</dt>
+          <dd>Teknik Informatika</dd>
+
+          <dt>Semester</dt>
+          <dd>3</dd>
+        </dl>
+      </section>
+
+      <section>
+        <h2>Tugas yang sudah dikerjakan</h2>
+        <ul>
+          <li>
+            <a
+              href="https://github.com/mchljordn/PemrogramanWeb/tree/main/Tugas%201"
+              target="_blank"
+              >Tugas 1</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/mchljordn/PemrogramanWeb/tree/main/Tugas%202"
+              target="_blank"
+              >Tugas 2</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/mchljordn/PemrogramanWeb/tree/main/Tugas%203"
+              target="_blank"
+              >Tugas 3</a
+            >
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2024 Michael Jordan Alfanius Sianipar</p>
+    </footer>
+  </body>
 </html>
