--- a/PemogramanWeb/index.html
+++ b/PemogramanWeb/index.html
@@ -34,23 +34,31 @@
         <ul>
           <li>
             <a
-              href="https://github.com/mchljordn/PemrogramanWeb/tree/main/Tugas%201"
+              href="https://mchljordn.github.io/PemrogramanWeb/Tugas%201/SourceCode.html"
               target="_blank"
               >Tugas 1</a
             >
           </li>
           <li>
             <a
-              href="https://github.com/mchljordn/PemrogramanWeb/tree/main/Tugas%202"
+              href="https://mchljordn.github.io/PemrogramanWeb/Tugas%202/SourceCode.html"
               target="_blank"
               >Tugas 2</a
             >
           </li>
           <li>
             <a
-              href="https://github.com/mchljordn/PemrogramanWeb/tree/main/Tugas%203"
+              href="https://mchljordn.github.io/PemrogramanWeb/Tugas%203/HurufMutu.html"
               target="_blank"
-              >Tugas 3</a
+              >Tugas 3 (huruf mutu)</a
+            >
+          </li>
+
+          <li>
+            <a
+              href="https://mchljordn.github.io/PemrogramanWeb/Tugas%203/Kalkulator.html"
+              target="_blank"
+              >Tugas 3 (Kalkulator)</a
             >
           </li>
         </ul>
