--- a/PemogramanWeb/index.html
+++ b/PemogramanWeb/index.html
@@ -34,21 +34,21 @@
         <ul>
           <li>
             <a
-              href="https://mchljordn.github.io/PemrogramanWeb/Tugas%201/SourceCode.html"
+              href="https://mchljordn.github.io/PemogramanWeb/Tugas%201/SourceCode.html"
               target="_blank"
               >Tugas 1</a
             >
           </li>
           <li>
             <a
-              href="https://mchljordn.github.io/PemrogramanWeb/Tugas%202/SourceCode.html"
+              href="https://mchljordn.github.io/PemogramanWeb/Tugas%202/SourceCode.html"
               target="_blank"
               >Tugas 2</a
             >
           </li>
           <li>
             <a
-              href="https://mchljordn.github.io/PemrogramanWeb/Tugas%203/HurufMutu.html"
+              href="https://mchljordn.github.io/PemogramanWeb/Tugas%203/HurufMutu.html"
               target="_blank"
               >Tugas 3 (huruf mutu)</a
             >
@@ -56,7 +56,7 @@
 
           <li>
             <a
-              href="https://mchljordn.github.io/PemrogramanWeb/Tugas%203/Kalkulator.html"
+              href="https://mchljordn.github.io/PemogramanWeb/Tugas%203/Kalkulator.html"
               target="_blank"
               >Tugas 3 (Kalkulator)</a
             >
