--- a/PemogramanWeb/index.html
+++ b/PemogramanWeb/index.html
@@ -41,7 +41,7 @@
           </li>
           <li>
             <a
-              href="https://mchljordn.github.io/PemogramanWeb/Tugas%202/SourceCode.html"
+              href="https://mchljordn.github.io/PemogramanWeb/Tugas2/SourceCode.html"
               target="_blank"
               >Tugas 2</a
             >
