--- a/PemogramanWeb/Tugas2/SourceCode.html
+++ b/PemogramanWeb/Tugas2/SourceCode.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Biodata pribadi saya">
     <title>MY BIODATA</title>
-    <link rel="stylesheet" href="https://github.com/mchljordn/mchljordn.github.io/blob/main/PemogramanWeb/Tugas2/style.css">
+    <link rel="stylesheet" href="style.css">
     <style></style>
   </head>
   <body>
