--- a/PemogramanWeb/index.html
+++ b/PemogramanWeb/index.html
@@ -41,7 +41,7 @@
           </li>
           <li>
             <a
-              href="https://mchljordn.github.io/PemogramanWeb/Tugas2/SourceCode.html"
+              href="https://mchljordn.github.io/PemogramanWeb/Tugas%202/SourceCode.html"
               target="_blank"
               >Tugas 2</a
             >
@@ -59,6 +59,13 @@
               href="https://mchljordn.github.io/PemogramanWeb/Tugas%203/Kalkulator.html"
               target="_blank"
               >Tugas 3 (Kalkulator)</a
+            >
+          </li>
+          <li></li>
+            <a
+              href="https://mchljordn.github.io/PemogramanWeb/Tugas%204/"
+              target="_blank"
+              >Tugas 4 (PHP)</a
             >
           </li>
         </ul>
