--- a/PemogramanWeb/index.html
+++ b/PemogramanWeb/index.html
@@ -34,38 +34,44 @@
         <ul>
           <li>
             <a
-              href="https://mchljordn.github.io/PemogramanWeb/Tugas%201/SourceCode.html"
+              href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%204SourceCode.html"
               target="_blank"
               >Tugas 1</a
             >
           </li>
           <li>
             <a
-              href="https://mchljordn.github.io/PemogramanWeb/Tugas%202/SourceCode.html"
+              href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%204SourceCode.html"
               target="_blank"
               >Tugas 2</a
             >
           </li>
           <li>
             <a
-              href="https://mchljordn.github.io/PemogramanWeb/Tugas%203/HurufMutu.html"
+              href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%204HurufMutu.html"
               target="_blank"
               >Tugas 3 (huruf mutu)</a
             >
           </li>
-
           <li>
             <a
-              href="https://mchljordn.github.io/PemogramanWeb/Tugas%203/Kalkulator.html"
+              href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%204Kalkulator.html"
               target="_blank"
               >Tugas 3 (Kalkulator)</a
             >
           </li>
-          <li></li>
+          <li>
             <a
-              href="https://mchljordn.github.io/PemogramanWeb/Tugas%204/"
+              href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%204"
               target="_blank"
               >Tugas 4 (PHP)</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%205"
+              target="_blank"
+              >Tugas 5 (CRUD MySql Mahasiswa)</a
             >
           </li>
         </ul>
