--- a/PemogramanWeb/index.html
+++ b/PemogramanWeb/index.html
@@ -1,85 +1,68 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Biodata Pengumpulan Tugas</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <h1>Pengumpulan Tugas Pemrograman Web</h1>
-    </header>
 
-    <main>
-      <section>
-        <h2>Biodata</h2>
-        <dl>
-          <dt>Nama</dt>
-          <dd>Michael Jordan Alfanius Sianipar</dd>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Biodata Pengumpulan Tugas</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-          <dt>NPM</dt>
-          <dd>140810230060</dd>
+<body>
+  <header>
+    <h1>Pengumpulan Tugas Pemrograman Web</h1>
+  </header>
 
-          <dt>Jurusan</dt>
-          <dd>Teknik Informatika</dd>
+  <main>
+    <section>
+      <h2>Biodata</h2>
+      <dl>
+        <dt>Nama</dt>
+        <dd>Michael Jordan Alfanius Sianipar</dd>
 
-          <dt>Semester</dt>
-          <dd>3</dd>
-        </dl>
-      </section>
+        <dt>NPM</dt>
+        <dd>140810230060</dd>
 
-      <section>
-        <h2>Tugas yang sudah dikerjakan</h2>
-        <ul>
-          <li>
-            <a
-              href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%204SourceCode.html"
-              target="_blank"
-              >Tugas 1</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%204SourceCode.html"
-              target="_blank"
-              >Tugas 2</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%204HurufMutu.html"
-              target="_blank"
-              >Tugas 3 (huruf mutu)</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%204Kalkulator.html"
-              target="_blank"
-              >Tugas 3 (Kalkulator)</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%204"
-              target="_blank"
-              >Tugas 4 (PHP)</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%205"
-              target="_blank"
-              >Tugas 5 (CRUD MySql Mahasiswa)</a
-            >
-          </li>
-        </ul>
-      </section>
-    </main>
+        <dt>Jurusan</dt>
+        <dd>Teknik Informatika</dd>
 
-    <footer>
-      <p>&copy; 2024 Michael Jordan Alfanius Sianipar</p>
-    </footer>
-  </body>
+        <dt>Semester</dt>
+        <dd>3</dd>
+      </dl>
+    </section>
+
+    <section>
+      <h2>Tugas yang sudah dikerjakan</h2>
+      <ul>
+        <li>
+          <a href="https://mchljordn.github.io/PemogramanWeb/Tugas%201/SourceCode.html" target="_blank">Tugas 1</a>
+        </li>
+        <li>
+          <a href="https://mchljordn.github.io/PemogramanWeb/Tugas%202/SourceCode.html" target="_blank">Tugas 2</a>
+        </li>
+        <li>
+          <a href="https://mchljordn.github.io/PemogramanWeb/Tugas%203/HurufMutu.html" target="_blank">Tugas 3 (huruf
+            mutu)</a>
+        </li>
+        <li>
+          <a href="https://mchljordn.github.io/PemogramanWeb/Tugas%203/Kalkulator.html" target="_blank">Tugas 3
+            (Kalkulator)</a>
+        </li>
+        <li>
+          <a href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%204"
+            target="_blank">Tugas 4 (PHP)</a>
+        </li>
+        <li>
+          <a href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%205"
+            target="_blank">Tugas 5 (CRUD MySql Mahasiswa)</a>
+        </li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 Michael Jordan Alfanius Sianipar</p>
+  </footer>
+</body>
+
 </html>
