--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
           <a href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%205"
             target="_blank">Tugas 5 (CRUD MySql Mahasiswa)</a>
         </li>
+        <li>
+          <a href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%206"
+            target="_blank">Tugas 6 (Cookies)</a>
+        </li>
       </ul>
     </section>
   </main>
