--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
           <a href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%206"
             target="_blank">Tugas 6 (Cookies)</a>
         </li>
+        <li>
+          <a href="https://github.com/mchljordn/mchljordn.github.io/tree/main/PemogramanWeb/Tugas%207"
+            target="_blank">Tugas 7</a>
       </ul>
     </section>
   </main>
